Version 2009121403
+ Sync VERSION numbers

Version 2009121402
+ Require Test::More 0.88.

Version 2009121401
+ Tweaks in displaying messages.

Version 2009121001
+ Better skipping of tests.

Version 2009120903
+ Use @+ instead of @- to find the number of captures.

Version 2009120902
+ Tweaked undocumented features.

Version 2009120901
+ Added undocumented features.

Version 2009120801
+ Added 'test' option to 'match'.

Version 2009120501
+ Methods 'match' and 'no_match' can take additional parameters.

Version 2009120301
+ Fixed a bug that autovivified the correct number of named params.
+ Set build_requires & configure_requires.

Version 2009041401
+ Added tests for POD and Kwalitee

Version 2009041401
+ Fixed MANIFEST.

Version 2009041001
+ Add OO interface.

Version 2009040901
+ Modernized Makefile.PL.
+ POD fixes.
+ Added Changes file.
+ Removed $VERSION from test files.

Version 2009033101
+ Initial release