@@ -23,6 +23,5 @@ t/212_object_extra_args.t
 t/220_comment.t
 t/950_pod.t
 t/960_pod_coverage.t
-t/990_kwalitee.t
 t/999_release.t
 t/Common.pm
