@@ -1,4 +1,4 @@
-This is version 2009121403 of Test::Regexp, a module to test regular
+This is version 2009121701 of Test::Regexp, a module to test regular
 expressions with.
 
 It's a pure perl module, and should install anywhere using
